Cours prepa html/css/js

--- a/revision_pour_projet/index.html
+++ b/revision_pour_projet/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modele de page responsive</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/app.js" defer></script>
 </head>
 <body>
     <!-- 
         menu fixe en haut
      -->
-    <nav class="navbar"></nav>
+    <nav class="navbar">
+        <div class="btn-switch day"></div>
+    </nav>
     <!-- 
         Header de page
      -->
