--- a/cours_javascript/exercices/jeu_memory/index.html
+++ b/cours_javascript/exercices/jeu_memory/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="countdown"></div>
         <div class="info"></div>
-        <div class="btn-play"></div>
+        <span class="btn-play">JOUER</span>
     </header>
     <section class="zone-jeu">
         <!-- dimensions et nombre de carrés gérés par JS -->
